--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,8 @@
     --color-3: 210 100% 63%;
     --color-4: 195 100% 63%;
     --color-5: 90 100% 63%;
+    --gradient-color: #8350e8;
+    --sparkles-color: #8350e8;
   }
 
   .dark {
@@ -56,6 +58,8 @@
     --color-3: 210 100% 63%;
     --color-4: 195 100% 63%;
     --color-5: 90 100% 63%;
+    --gradient-color: #8350e8;
+    --sparkles-color: #ffffff;
   }
 }
 
