--- a/app/globals.css
+++ b/app/globals.css
@@ -6,28 +6,31 @@
   .delay-100 {
     animation-delay: 100ms;
   }
+
   .delay-200 {
     animation-delay: 200ms;
   }
+
   .delay-300 {
     animation-delay: 300ms;
   }
+
   .delay-500 {
     animation-delay: 500ms;
   }
+
   .delay-700 {
     animation-delay: 700ms;
   }
-  
+
   .fade-top-lg {
-    mask-image: linear-gradient(to bottom, 
-      transparent, 
-      rgba(0, 0, 0, 1) 8rem
-    );
+    mask-image: linear-gradient(to bottom,
+        transparent,
+        rgba(0, 0, 0, 1) 8rem);
   }
 
   .animate-in {
-    animation-duration: 1000ms;
+    animation-duration: 200ms;
     animation-fill-mode: forwards;
     animation-timing-function: ease-out;
   }
@@ -101,6 +104,7 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
